# teamDCC

./: .gitignore  FieldEdgeDetection.cpp  class_out.py  dynamic_cc.py  hue_classifier.py  im_2_rgchroma.py  img_px.py  opencv_test.py  orange.py  plot_coords.py  plot_g_values.R  plot_rgb.py  test-yuv.py
c_src/: CMakeLists.txt  ColourCluster.cpp  ColourCluster.h  Colours.h  GreenChromaClassifier.cpp  GreenChromaClassifier.h  HSVSample.cpp  HSVSample.h  Histogram.h  Histogram.tcc  Histogram2D.h  Histogram2D.tcc  Polynomial.h  Polynomial.tcc  Sample.cpp  Sample.h  Types.cpp  Types.h  YUVSample.cpp  YUVSample.h  YUVSample2.cpp  YUVSample2.h  main.cpp
c_src/old_files/: Histogram.cpp  Histogram.h  Histogram.tcc  Polynomial.h  YUVSample2.cpp  YUVSample2.h
